--- a/TestTask/MainWindow.xaml
+++ b/TestTask/MainWindow.xaml
@@ -10,5 +10,8 @@
         <Image x:Name="imageCenter" Height="200" VerticalAlignment="Top" Margin="300,50,293.6,0"/>
         <Image x:Name="imageLeft" HorizontalAlignment="Left" Height="200" Margin="50,50,0,0" VerticalAlignment="Top" Width="200"/>
         <Image x:Name="imageRight" HorizontalAlignment="Right" Height="200" Margin="0,50,50,0" VerticalAlignment="Top" Width="200"/>
+        <TextBox x:Name="urlLeft" HorizontalAlignment="Left" Height="23" Margin="50,268,0,0" TextWrapping="Wrap" Text="Введите URL" VerticalAlignment="Top" Width="200"/>
+        <TextBox x:Name="urlCenter" HorizontalAlignment="Left" Height="23" Margin="300,268,0,0" TextWrapping="Wrap" Text="Введите URL" VerticalAlignment="Top" Width="200"/>
+        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="23" Margin="544,268,0,0" TextWrapping="Wrap" Text="Введите URL" VerticalAlignment="Top" Width="200"/>
     </Grid>
 </Window>
