--- a/TestTask/MainWindow.xaml
+++ b/TestTask/MainWindow.xaml
@@ -7,18 +7,9 @@
         mc:Ignorable="d"
         Title="Image Downloader 3000" Height="450" Width="800">
     <Grid>
-        <Image x:Name="imageCenter" Height="200" VerticalAlignment="Top" Margin="300,50,293.6,0"/>
-        <Image x:Name="imageLeft" HorizontalAlignment="Left" Height="200" Margin="50,50,0,0" VerticalAlignment="Top" Width="200"/>
-        <Image x:Name="imageRight" HorizontalAlignment="Right" Height="200" Margin="0,50,50,0" VerticalAlignment="Top" Width="200"/>
-        <TextBox x:Name="textBoxURLLeft" HorizontalAlignment="Left" Height="23" Margin="50,268,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="200" TextChanged="textBoxURLLeft_TextChanged"/>
-        <TextBox x:Name="textBoxURLCenter" HorizontalAlignment="Left" Height="23" Margin="300,268,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="200" TextChanged="textBoxURLCenter_TextChanged"/>
-        <TextBox x:Name="textBoxURLRight" HorizontalAlignment="Left" Height="23" Margin="544,268,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="200" TextChanged="textBoxURLRight_TextChanged"/>
-        <Button x:Name="buttonStartCenter" Content="Старт" HorizontalAlignment="Left" Margin="300,314,0,0" VerticalAlignment="Top" Width="75" IsEnabled="False" Click="buttonStartCenter_Click"/>
-        <Button x:Name="buttonStartRight" Content="Старт" HorizontalAlignment="Left" Margin="544,314,0,0" VerticalAlignment="Top" Width="75" IsEnabled="False" Click="buttonStartRight_Click"/>
-        <Button x:Name="buttonStopLeft" Content="Стоп" HorizontalAlignment="Left" Margin="175,314,0,0" VerticalAlignment="Top" Width="75" IsEnabled="False" Click="buttonStopLeft_Click"/>
-        <Button x:Name="buttonStartLeft" Content="Старт" HorizontalAlignment="Left" Margin="50,314,0,0" VerticalAlignment="Top" Width="75" IsEnabled="False" Click="buttonStartLeft_Click"/>
-        <Button x:Name="buttonStopCenter" Content="Стоп" HorizontalAlignment="Left" Margin="425,314,0,0" VerticalAlignment="Top" Width="75" IsEnabled="False" Click="buttonStopCenter_Click"/>
-        <Button x:Name="buttonStopRight" Content="Стоп" HorizontalAlignment="Left" Margin="669,314,0,0" VerticalAlignment="Top" Width="75" IsEnabled="False" Click="buttonStopRight_Click"/>
+        <local:ReusableControls x:Name="LeftReusable" Margin="50,45,455.6,-122"></local:ReusableControls>
+        <local:ReusableControls x:Name="CenterReusable" Margin="292,45,212.6,-122"></local:ReusableControls>
+        <local:ReusableControls x:Name="RightReusable" Margin="536,45,-30.4,-122"></local:ReusableControls>
         <Button x:Name="buttonDownloadAll" Content="Загрузить всё" HorizontalAlignment="Left" Margin="50,356,0,0" VerticalAlignment="Top" Width="694" IsEnabled="False" Click="buttonDownloadAll_Click"/>
         <ProgressBar x:Name="progressBar" HorizontalAlignment="Left" Height="10" Margin="50,400,0,0" VerticalAlignment="Top" Width="694" Minimum="0" Maximum="100"/>
     </Grid>
